--- a/DizajnerskiObrasci/.classpath
+++ b/DizajnerskiObrasci/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Ivana/Downloads/heksagon.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
